[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "specfempp_core"
version = "0.1.0"
description = "Kokkos implementation of SpecFEM2D code"
readme = "README.md"
authors = [
  { name = "Rohit R Kakodkar", email = "rohit_kakodkar@princeton.edu" },
  { name = "Lucas Sawade", email = "lsawade@princeton.edu" },
  { name = "Congyue Cui", email = "ccui@princeton.edu" }
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pre-commit~=2.19.0",
  "clang-format~=15.0.6",
  "ruff>=0.6.7"
]

docs = [
  "sphinx-rtd-theme~=1.3.0",
  "doc8>=0.3.6",
  "rstcheck>=6.2.4",
  "restructuredtext-lint>=1.4.0",
  "sphinx-copybutton~=0.4.0",
  "furo~=2024.8.6",
  "breathe~=4.35.0",
  "sphinx-sitemap~=2.2.0"
]

[tool.scikit-build]
cmake.define.CMAKE_BUILD_TYPE = "Release"
cmake.define.BUILD_TESTS = "ON"
cmake.define.SPECFEMPP_USE_SKBUILD = "ON"
cmake.define.SPECFEMPP_BINDING_PYTHON = "ON"
build-dir = "./build"
build.tool-args = ["-j4"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pre-commit = "^2.19.0"
clang-format = "^15.0.6"
sphinx-rtd-theme = "^1.0.0"
doc8 = ">=0.3.6"
rstcheck = ">=6.2.4"
restructuredtext-lint = ">=1.4.0"
sphinx-copybutton = "^0.4.0"
furo = ">=2024.8.6"
breathe = "^4.34.0"
sphinx-sitemap = "^2.2.0"
ruff = ">=0.6.7"

[tool.poetry.dev-dependencies]

[tool.snakefmt]
line_length = 90
include = '\.smk$|^Snakefile|\.py|^Snakefile.in$'
